feat(integration): Phase 7 외부 연동 실배선 — 증강 계약 전면 정합 + VLM 실배선 + KPST 무결성
1차 검증 이슈 10건(ENV-01/02·E-02/03·VlmClient WebClient·B-01/21/22/24/84) 해소.
증강·VLM 이 실제로 mock-server 를 경유하고 그 응답으로 동작하도록 배선하고,
내부 시뮬레이터가 결과를 자체 생성하던 self-fill 을 제거했다.

Changes:
- augment: HttpExternalAugmentClient 신설(POST /api/genai/jobs, 명세서 v1.1) — job_id 외부 발급 반전, 100장 청크 분할 위탁
- augment: POST /v1/genai/callback 수신부 신설(무서명 3계층) — 구 /v1/aug/callback·DevAugmentCallbackSimulator 제거
- augment: 외부 산출 프레임 이미지 실반입(개수·실재·해상도 fail-closed)
- augment: 위탁 진입점에 DeidentReportGate 배선(PII 유출 차단) + 해제 시 재개
- config: ExternalUrlPolicy/ProfileGatedUrlPolicy — VLM·증강 URL 정책 일원화, prd 완화 누수 기동 차단
- marking: rawSn 당 활성 마킹 1건 제약(409 + V142 부분 유니크)
- deident: 원본 실재 가드 + DeidentArtifactIntegrity(무결성 판정 단일 원천)
- mock-server: retrieve_progress fileName 을 실서버 계약(원본 절대경로 · {stem}-mask{ext})으로 교정
- db: V140 LS_DATA_AUG_JOB · V141 LS_DATA_AUG_JOB_FILE · V142 마킹 활성 유니크

Generated with Claude Code
Claude-Session: https://claude.ai/code/session_01DY1X2nqCYUVVpcpg5nPkBq